Day 5 - latex actualizado

--- a/AOC2023/latex/main.tex
+++ b/AOC2023/latex/main.tex
@@ -12,10 +12,16 @@
 
 El problema consiste en encontrar el número de ubicación más bajo que corresponde a cualquiera de los números iniciales de semillas, utilizando una serie de mapas proporcionados en un fichero. Estos mapas convierten números de una categoría (como semillas) en números de otra categoría (como suelo, fertilizante, agua, luz, temperatura, humedad y ubicación). Cada mapa contiene rangos de números y muestra cómo convertir un número de una categoría fuente a un número en una categoría destino. El objetivo es seguir las conversiones a través de las categorías para cada número de semilla inicial y determinar cuál es el número de ubicación más bajo correspondiente. En la segunda parte, se introduce una complicación adicional: los números iniciales de semillas representan rangos de números, lo que significa que se deben considerar varios números de semillas en lugar de solo uno.
 
+Para ver el enunciado completo de este problema, consulta el siguiente enlace:
+\begin{center}
+    \href{https://adventofcode.com/2023/day/5}{https://adventofcode.com/2023/day/5}
+\end{center}
 
-Para ver el enunciado completo de este problema, consulta el siguiente enlace: 
-\\
-\href{https://adventofcode.com/2023/day/5}{https://adventofcode.com/2023/day/5}.
+Código fuente de la solución en Python:
+\begin{center}
+    \href{https://github.com/jgonzalezmorente/advent-of-code/blob/main/AOC2023/aoc2023_5.py}{https://github.com/jgonzalezmorente/advent-of-code/blob/main/AOC2023/aoc2023\_5.py}
+\end{center}
+
 
 \subsection{Parte I}
 
