--- a/AOC2023/latex/config.tex
+++ b/AOC2023/latex/config.tex
@@ -53,6 +53,8 @@
 \newcommand{\inter}{\operatorname{\rm int}}
 \newcommand{\adh}[1]{\overline{#1}}
 \newcommand{\fr}[1]{\partial{#1}}
+\newcommand{\ceil}{\operatorname{\rm ceil}}
+\newcommand{\floor}{\operatorname{\rm floor}}
 \renewcommand{\vec}[1]{\mathbf{#1}}
 \newcommand{\prodesc}[2]{\left\langle #1,#2\right\rangle}
 \newcommand{\norm}[1]{\left\| #1\right\|}
