--- a/AOC2023/latex/main.tex
+++ b/AOC2023/latex/main.tex
@@ -129,9 +129,15 @@ Al final de este proceso compuesto, se obtendrá un conjunto de intervalos trans
 \end{enumerate}
 
 \section{Día 6: \textnormal{ \it Wait For It}}
+\begin{itemize}
+    \item Enunciado: \\
+    \href{https://adventofcode.com/2023/day/5}{https://adventofcode.com/2023/day/6}
+    \item Solución: \\ 
+    \href{https://github.com/jgonzalezmorente/advent-of-code/blob/main/AOC2023/aoc2023_6.py}{https://github.com/jgonzalezmorente/advent-of-code/blob/main/AOC2023/aoc2023\_6.py}
+\end{itemize}
 \subsection{Parte I}
 El objetivo de esta parte es determinar de cuantas formas podemos batir el récord de cada carrera de barcos de juguete. Las carreras nos las proporcionan en un fichero con dos registros: el primero contiene los tiempos de duración de cada carrera y el segundo las distancias recorridas. Por ejemplo,
-\begin{table}[h]
+\begin{table}[ht]
     \centering
     \begin{tabular}{|l|c|c|c|}
     \hline
@@ -157,7 +163,7 @@ Para calcular el resultado final, basta mapear esta función sobre la lista de p
 
 \subsection{Parte II}
 El objetivo de esta parte es el mismo que en la parte anterior, pero suponiendo que solo hay una carrera. Esta carrera se forma concatenando las cifras del tiempo empleado y distancia recorrida respectivamente. En el ejemplo anterior teníamos 
-\begin{table}[h]
+\begin{table}[ht]
     \centering
     \begin{tabular}{|l|c|c|c|}
     \hline
