--- a/AOC2023/latex/main.tex
+++ b/AOC2023/latex/main.tex
@@ -171,12 +171,20 @@ El objetivo de esta parte es el mismo que en la parte anterior, pero suponiendo 
 
 Por la forma en la que se ha resuelto la parte I, no hay que hacer nada adicional, el mismo método funciona, ya que no se ha empleado fuerza bruta.
 
+\section{Día 7: \textnormal{ \it Camel Cards }}
+\begin{itemize}
+    \item Enunciado: \\
+    \href{https://adventofcode.com/2023/day/7}{https://adventofcode.com/2023/day/7}
+    \item Solución: \\ 
+    \href{https://github.com/jgonzalezmorente/advent-of-code/blob/main/AOC2023/aoc2023_7.py}{https://github.com/jgonzalezmorente/advent-of-code/blob/main/AOC2023/aoc2023\_7.py}
+\end{itemize}
+
 \section{Día 8: \textnormal{ \it Haunted Wasteland }}
 \begin{itemize}
     \item Enunciado: \\
-    \href{https://adventofcode.com/2023/day/5}{https://adventofcode.com/2023/day/6}
+    \href{https://adventofcode.com/2023/day/8}{https://adventofcode.com/2023/day/8}
     \item Solución: \\ 
-    \href{https://github.com/jgonzalezmorente/advent-of-code/blob/main/AOC2023/aoc2023_6.py}{https://github.com/jgonzalezmorente/advent-of-code/blob/main/AOC2023/aoc2023\_6.py}
+    \href{https://github.com/jgonzalezmorente/advent-of-code/blob/main/AOC2023/aoc2023_8.py}{https://github.com/jgonzalezmorente/advent-of-code/blob/main/AOC2023/aoc2023\_8.py}
 \end{itemize}
 
 Nos proporcionan una red formada por dos elementos:
